--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,9 +5,20 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-
-
-
+.theme-light {
+  --headings-font-weight: 700;
+  --page-main-font-weight: 400;
+  --button-text-color: var(--color-white, #fff);
+  --text-color: var(--color-black, #000000);
+  --page-background-color: var(--color-white, #ffffff);
+  --page-background-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      #d3d3d300 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+}
 
 .theme-dark {
   --headings-font-weight: 785;
@@ -15,9 +26,30 @@
   --button-text-color: var(--color-green, #00cc14);
   --text-color: var(--color-green, #00cc14);
   --page-background-color: var(--color-black, #000000);
-  --page-background-image: url(../svg/pattern-dark.svg);
-  --like-contour-color: var(--color-green, #00cc14);
+  --page-background-image: repeating-linear-gradient(
+      to left,
+      #000000 0 2px,
+      #00000000 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000000 0 2px, #00000000 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+}
 
+@media (prefers-color-scheme: light) {
+  :root {
+    --headings-font-weight: 700;
+    --page-main-font-weight: 400;
+    --button-text-color: var(--color-white, #fff);
+    --text-color: var(--color-black, #000000);
+    --page-background-color: var(--color-white, #ffffff);
+    --page-background-image: repeating-linear-gradient(
+        to left,
+        #d3d3d3 0 2px,
+        #d3d3d300 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,7 +59,14 @@
     --button-text-color: var(--color-green, #00cc14);
     --text-color: var(--color-green, #00cc14);
     --page-background-color: var(--color-black, #000000);
-    --page-background-image: url(../svg/pattern-dark.svg);
-   
+    --page-background-image: repeating-linear-gradient(
+        to left,
+        #000000 0 2px,
+        #00000000 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000000 0 2px, #00000000 2px 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
   }
 }
+
+
