--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,3 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
@@ -10,11 +9,13 @@
   --page-main-font-family: "Inter", sans-serif;
   --page-main-font-weight: 400;
   --page-accent-font-family: "PressStart2P", fantasy;
-  --page-background-image: url(../svg/pattern-light.svg);
-
-  --headings-font-weight: 700;
-
-  --button-text-color: var(--page-background-color, #fff);
+  --page-background-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      #d3d3d300 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, #d3d3d300 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 
   --like-main-body-color: none;
   --like-contour-color: var(--text-color, #000000);
@@ -23,7 +24,4 @@
   --headings-font-weight: 700;
 
   --button-text-color: var(--page-background-color, #fff);
-
-
 }
-
